# streaming-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start.sh  stop.sh
dashboards/: monitor.py
docker/: docker-compose.yml
sample_output/: schema_evolution_demo.md
scripts/: reset.sh
src/: producer.py  schema_registry.py  spark_consumer.py
tests/: test_schema_registry.py
