[project]
name = "streaming-pipeline"
version = "0.1.0"
description = "Kafka + PySpark Structured Streaming + Delta Lake pipeline"
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    "kafka-python-ng",
    "streamlit==1.36.0",
    "pandas==2.2.2",
    "pyarrow>=16.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "faker==25.9.1",
]

[dependency-groups]
dev = ["pytest==8.2.2"]

[tool.uv]
package = false
